2007-09-06  Stefan Kost  <ensonic@users.sf.net>

	* gst/mpegtsparse/mpegtsparse.c:
	  Fix the build (missing stdlib.h).

2007-09-06  Sebastian Dröge  <slomo@circular-chaos.org>

	* gst/spectrum/fix_fft.c:
	Remove fixed point FFT as it's not used anymore.

2007-09-06  Sebastian Dröge  <slomo@circular-chaos.org>

	* configure.ac:
	* gst/spectrum/Makefile.am:
	* gst/spectrum/demo-audiotest.c: (draw_spectrum),
	(message_handler), (main):
	* gst/spectrum/demo-osssrc.c: (draw_spectrum), (message_handler):
	* gst/spectrum/gstspectrum.c: (gst_spectrum_base_init),
	(gst_spectrum_class_init), (gst_spectrum_init),
	(gst_spectrum_dispose), (gst_spectrum_set_property),
	(gst_spectrum_get_property), (gst_spectrum_start),
	(gst_spectrum_setup), (gst_spectrum_message_new),
	(gst_spectrum_transform_ip):
	* gst/spectrum/gstspectrum.h:
	Port GstSpectrum to GstAudioFilter and libgstfft, add support
	for int32, float and double, use floats for the message contents,
	average all FFTs done in one interval for better results, use
	a better windowing function, allow posting the phase in the message
	and actually do an FFT with the requested number of bands instead
	of interpolating.

	* tests/check/elements/spectrum.c: (GST_START_TEST),
	(spectrum_suite):
	Improve the units tests by checking for a 11025Hz sine wave
	and add unit tests for all 4 supported sample types.

2007-09-05  Wim Taymans  <wim.taymans@gmail.com>

	* gst/real/gstrealvideodec.c: (gst_real_video_dec_chain),
	(gst_real_video_dec_setcaps):
	Add some more debugging.
	Don't set LONG for width/height in caps.
	Set correct output buffer size when caps changed.
	The custom message sent to the decoder should not include the format and
	subformat. Fixes #471554.

2007-09-04  Tim-Philipp Müller  <tim at centricular dot net>

	* gst/rtpmanager/gstrtpsession.c:
	  Make compiler happy: fix compilation with -Wall -Werror
	  (#473562).

2007-09-03  Johan Dahlin  <johan@gnome.org>
